2013-02-02  Mark H Weaver <mhw@netris.org>

	* src/x86/ffi64.c (ffi_call): Sign-extend integer arguments passed
	via general purpose registers.

2013-01-21  Nathan Rossi <nathan.rossi@xilinx.com>

	* README: Add MicroBlaze details.
	* Makefile.am: Add MicroBlaze support.
	* configure.ac: Likewise.
	* src/microblaze/ffi.c: New.
	* src/microblaze/ffitarget.h: Likewise.
	* src/microblaze/sysv.S: Likewise.

2013-01-21  Nathan Rossi <nathan.rossi@xilinx.com>
	* testsuite/libffi.call/return_uc.c: Fixed issue.

2013-01-21  Chris Zankel   <chris@zankel.net>

	* README: Add Xtensa support.
	* Makefile.am: Likewise.
	* configure.ac: Likewise.
	* Makefile.in Regenerate.
	* configure: Likewise.
	* src/prep_cif.c: Handle Xtensa.
	* src/xtensa: New directory.
	* src/xtensa/ffi.c: New file.
	* src/xtensa/ffitarget.h: Ditto.
	* src/xtensa/sysv.S: Ditto.

2013-01-11  Anthony Green  <green@moxielogic.com>

	* src/powerpc/ffi_darwin.c (ffi_prep_args): Replace // style
	comments with /* */ for xlc compiler.
	* src/powerpc/aix.S (ffi_call_AIX): Ditto.
	* testsuite/libffi.call/ffitest.h (allocate_mmap): Delete
	deprecated inline function.
	* testsuite/libffi.special/ffitestcxx.h: Ditto.
	* README: Add update for AIX support.

2013-01-11  Anthony Green  <green@moxielogic.com>

	* configure.ac: Robustify pc relative reloc check.
	* m4/ax_cc_maxopt.m4: Don't -malign-double.  This is an ABI
	changing option for 32-bit x86.
	* aclocal.m4, configure: Rebuilt.
	* README: Update supported target list.

2013-01-10  Anthony Green  <green@moxielogic.com>

	* README (tested): Add Compiler column to table.

2013-01-10  Anthony Green  <green@moxielogic.com>

	* src/x86/ffi64.c (struct register_args): Make sse array and array
	of unions for sunpro compiler compatibility.

2013-01-10  Anthony Green  <green@moxielogic.com>

	* configure.ac: Test target platform size_t size.  Handle both 32
	and 64-bit builds for x86_64-* and i?86-* targets (allowing for
	CFLAG option to change default settings).