@@ -1,3 +1,8 @@
+2013-02-06  Anthony Green <green@moxielogic.com>
+
+	* Makefile.am (pkgconfigdir): Add missing pkgconfig install bits.
+	* Makefile.in: Rebuild.
+
 2013-02-02  Mark H Weaver <mhw@netris.org>
 
 	* src/x86/ffi64.c (ffi_call): Sign-extend integer arguments passed
